--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
@@ -7,56 +7,104 @@
 </head>
 <body>
 <div th:fragment="topNavBar">
-  <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
-    <input type="submit" />
-  </form>
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <a class="navbar-brand" th:href="@{/static}"> <img
-            th:src="@{/images/ShopmeAdminSmall.png}"/>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-            data-target="#topNavbar"
-            aria-controls="topNavbar" aria-expanded="false"
-            aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="topNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" th:href="@{/users}" sec:authorize="hasAuthority('Admin')">Users</a></li>
-        <li class="nav-item"><a class="nav-link"
-                                th:href="@{/categories}" sec:authorize="hasAnyAuthority('Admin','Editor')">Categories</a></li>
-        <li class="nav-item"><a class="nav-link" th:href="@{/brands}" sec:authorize="hasAnyAuthority('Admin','Editor')">Brands</a></li>
-        <li class="nav-item"><a class="nav-link"
-                                th:href="@{/products}" sec:authorize="hasAnyAuthority('Admin','Editor','Salesperson','Shipper')">Products</a></li>
-        <li class="nav-item"><a class="nav-link"
-                                th:href="@{/customers}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Customers</a></li>
-        <li class="nav-item"><a class="nav-link"
-                                th:href="@{/Shipping}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Shipping</a></li>
-        <li class="nav-item"><a class="nav-link" th:href="@{/report}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Sales
-          Report</a></li>
-        <li class="nav-item"><a class="nav-link"
-                                th:href="@{/articles}" sec:authorize="hasAnyAuthority('Admin', 'Editor')">Articles</a></li>
-        <li class="nav-item"><a class="nav-link" th:href="@{/menus}" sec:authorize="hasAnyAuthority('Admin','Editor')">Menus</a></li>
-        <li class="nav-item"><a class="nav-link"
-                                th:href="@{/settings}" sec:authorize="hasAuthority('Admin')">Settings</a>
-        </li>
-        <li>
-          <span class="fas fa-user fa-2x icon-silver"></span>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle"
-             data-toggle="dropdown"
-             th:href="@{/account}"
-             id="userDetail"
-             sec:authentication="principal.fullname"></a>
+    <form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+        <input type="submit"/>
+    </form>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <a class="navbar-brand" th:href="@{/static}"> <img
+                th:src="@{/images/ShopmeAdminSmall.png}"/>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#topNavbar"
+                aria-controls="topNavbar" aria-expanded="false"
+                aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="topNavbar">
+            <ul class="navbar-nav">
 
-          <div class="dropdown-menu">
-            <a class="dropdown-item" id="logoutLink">LogOut</a>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </nav>
+                <th:block sec:authorize="hasAuthority('Admin')">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+                           th:href="@{/users}" id="UserDropDown">Users</a>
+                        <div class="dropdown-menu">
+                            <a th:href="@{/users/new}" class="dropdown-item">Create New</a>
+                            <a th:href="@{/users}" class="dropdown-item">View All</a>
+                        </div>
+                    </li>
+                </th:block>
+
+
+                <th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+                           th:href="@{/categories}">Categories</a>
+                        <div class="dropdown-menu">
+                            <a th:href="@{/categories/new}" class="dropdown-item">Create New</a>
+                            <a th:href="@{/categories}" class="dropdown-item">View All</a>
+                        </div>
+                    </li>
+                </th:block>
+
+
+                <th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+                           th:href="@{/brands}">Brands</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" th:href="@{'/brands/new'}">Create New</a>
+                            <a class="dropdown-item" th:href="@{'/brands'}">View All</a>
+                        </div>
+                    </li>
+                </th:block>
+
+
+                <th:block sec:authorize="hasAnyAuthority('Admin','Editor','Salesperson','Shipper')">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown"
+                           th:href="@{/products}">Products</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" th:href="@{'/products/new'}">Create New</a>
+                            <a class="dropdown-item" th:href="@{'/products'}">View All</a>
+                        </div>
+                    </li>
+                </th:block>
+
+
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/customers}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Customers</a>
+                </li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/Shipping}" sec:authorize="hasAnyAuthority('Admin','Salesperson')">Shipping</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/report}"
+                                        sec:authorize="hasAnyAuthority('Admin','Salesperson')">Sales
+                    Report</a></li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/articles}" sec:authorize="hasAnyAuthority('Admin', 'Editor')">Articles</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/menus}"
+                                        sec:authorize="hasAnyAuthority('Admin','Editor')">Menus</a></li>
+                <li class="nav-item"><a class="nav-link"
+                                        th:href="@{/settings}" sec:authorize="hasAuthority('Admin')">Settings</a>
+                </li>
+                <li>
+                    <span class="fas fa-user fa-2x icon-silver"></span>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle"
+                       data-toggle="dropdown"
+                       th:href="@{/account}"
+                       id="userDetail"
+                       sec:authentication="principal.fullname"></a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" id="logoutLink">LogOut</a>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
 </div>
 </body>
 </html>
