Product Module (FrontEnd) : Listing of Products, Pagination, BreadCrumb and Implementations.

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/fragments.html
@@ -125,7 +125,7 @@
     </div>
 
     <div class="text-center m-1" th:if="${totalItems == 0}">
-        <span>No [[${context}}]] found</span>
+        <span>No [[${context}]] found</span>
     </div>
 
     <div th:if="${totalPages > 0}">
