--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
@@ -22,6 +22,55 @@
     </div>
 </footer>
 
+<a th:fragment="pagination_link(page, text, context)" class="page-link"
+   th:href="@{'/'+${context}+'/page/'+${page} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} +${(keyword!=null) ? '&keyword='+keyword : ''} }">
+    [[${text}]]</a>
+
+<div th:fragment="pagination(context, totalPages, currentPage, totalItems, startCount, endCount, MessageContext)">
+    <div class="text-center m-1" th:if="${totalItems > 0}">
+			<span>Showing [[${#strings.capitalize(MessageContext)}]] # [[${startCount}]] to [[${endCount}]] of
+				[[${totalItems}]]</span>
+    </div>
+
+    <div class="text-center m-1" th:if="${totalItems == 0}">
+        <span>No [[${MessageContext}]] found</span>
+    </div>
+
+    <div th:if="${totalPages > 0}">
+        <nav>
+            <ul class="pagination justify-content-center">
+                <li
+                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments :: pagination_link(1, 'First', ${context})}"></a>
+                </li>
+                <li
+                        th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments :: pagination_link(${(currentPage - 1 <= 0) ? 1 : (currentPage -1)}, 'Previous', ${context})}"></a>
+                </li>
+
+                <li
+                        th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
+                        th:each="i : ${#numbers.sequence(1, totalPages)}">
+                    <a th:replace="~{fragments :: pagination_link(${i}, ${i.toString()}, ${context})}"></a>
+
+                </li>
+
+                <li
+                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments :: pagination_link(${(currentPage+1)}, 'Next', ${context})}"></a>
+                </li>
+
+
+                <li
+                        th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                    <a th:replace="~{fragments :: pagination_link(${totalPages}, 'Last', ${context})}"></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
+
+
 </body>
 </html>
 
