--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/products_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/products_by_category.html
@@ -4,21 +4,8 @@
 <body>
 <div class="container-fluid">
     <div th:replace="~{navigation :: header_menu}"></div>
-    <div th:if="${listCategoryParents != null && !listCategoryParents.empty}">
-        <div class="row">
-            <div class="col">
-                <nav>
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-                        <th:block th:each="parent : ${listCategoryParents}">
-                            <li class="breadcrumb-item"><a th:href="@{'/c/'+${parent.alias}}">[[${parent.name}]]</a>
-                            </li>
-                        </th:block>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-    </div>
+
+    <div th:replace="~{breadcrumb :: content}"></div>
 
     <div class="row text-center">
         <th:block th:each="cat : ${category.children}">
@@ -37,8 +24,10 @@
         <th:block th:each="product :${products}">
             <div class="col">
                 <div>
-                    <img th:src="@{${product.mainImagePath}}" th:alt="${product.name}" width="150"/><br>
-                    <b>[[${product.name}]]</b>
+                    <a th:href="@{'/p/'+${product.alias}}">
+                        <img th:src="@{${product.mainImagePath}}" th:alt="${product.name}" width="150"/><br>
+                        <b>[[${product.shortName}]]</b>
+                    </a>
                 </div>
 
                 <div th:if="${product.discountPercent <= 0}">
