--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/products_by_category.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/products_by_category.html
@@ -4,12 +4,13 @@
 <body>
 <div class="container-fluid">
     <div th:replace="~{navigation :: header_menu}"></div>
+    <div th:replace="~{navigation :: search_nav}"></div>
 
     <div th:replace="~{breadcrumb :: content}"></div>
 
     <div class="row text-center">
         <th:block th:each="cat : ${category.children}">
-            <div class="col" th:if="${cat.enabled == true}">
+            <div class="col-sm-2" th:if="${cat.enabled == true}">
                 <a th:href="@{'/c/'+${cat.alias} }">
                     <img th:src="@{${cat.photosImagePath}}"/><br>
                     <b>[[${cat.name}]]</b>
@@ -22,24 +23,7 @@
 
     <div class="row">
         <th:block th:each="product :${products}">
-            <div class="col">
-                <div>
-                    <a th:href="@{'/p/'+${product.alias}}">
-                        <img th:src="@{${product.mainImagePath}}" th:alt="${product.name}" width="150"/><br>
-                        <b>[[${product.shortName}]]</b>
-                    </a>
-                </div>
-
-                <div th:if="${product.discountPercent <= 0}">
-                    <span>[[${product.price}]]</span>
-                </div>
-
-                <div th:if="${product.discountPercent > 0}">
-                    <span style="font-size: larger; color: darkred">$ [[${product.discountPercent}]]</span>
-                    <del><span>$ [[${product.price}]]</span></del>
-                </div>
-
-            </div>
+            <div th:replace="product/product_fragment :: content(${product})"></div>
         </th:block>
     </div>
 
