--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_overview.html
@@ -94,6 +94,7 @@
         <label class="col-sm-2 col-form-label">Cost: </label>
         <div class="col-sm-10">
             <input type="number"
+                   step="0.01"
                    class="form-control"
                    th:field="*{cost}" required/>
         </div>
@@ -102,14 +103,14 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">List Price: </label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" th:field="*{price}" required/>
+            <input type="number" step="0.01" class="form-control" th:field="*{price}" required/>
         </div>
     </div>
 
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Discount: </label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" th:field="*{discountPercent}" required/>
+            <input type="number" step="0.01" class="form-control" th:field="*{discountPercent}" required/>
         </div>
     </div>
 
