--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_shipping.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/products/product_shipping.html
@@ -15,7 +15,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Length (inch): </label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" th:field="*{length}" required/>
+            <input type="number" step="0.01" class="form-control" th:field="*{length}" required/>
         </div>
     </div>
 
@@ -29,14 +29,14 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Height (inch): </label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" th:field="*{height}" required/>
+            <input type="number" step="0.01" class="form-control" th:field="*{height}" required/>
         </div>
     </div>
 
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Weight (pounds): </label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" th:field="*{weight}" required/>
+            <input type="number" step="0.01" class="form-control" th:field="*{weight}" required/>
         </div>
     </div>
 </div>
