--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
 
-    <title>[[${title}]]</title>
+    <title>[[${title}]] - [[${SITE_NAME}]]</title>
     <link rel="stylesheet" type="text/css"
           th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
@@ -15,12 +15,6 @@
 </head>
 
 <body>
-
-<footer th:fragment="footer">
-    <div>
-        <p>Shopme Control Panel - Copyright &copy;shopme</p>
-    </div>
-</footer>
 
 <a th:fragment="pagination_link(page, text, context)" class="page-link"
    th:href="@{'/'+${context}+'/page/'+${page} +'?sortField='+${sortField}+'&sortDir=' +${sortDir} +${(keyword!=null) ? '&keyword='+keyword : ''} }">
@@ -70,6 +64,12 @@
     </div>
 </div>
 
+
+<footer th:fragment="footer">
+    <div>
+        <p>Shopme Control Panel - [[${COPYRIGHT}]]</p>
+    </div>
+</footer>
 
 </body>
 </html>
