--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
@@ -32,13 +32,20 @@
             </div>
             <div>
                 List Price:
-                <span th:if="${product.discountPercent <= 0}">$ [[${product.price}]]</span>
-                <del th:if="${product.discountPercent > 0}"><span>$ [[${product.price}]]</span></del>
+                <span th:if="${product.discountPercent <= 0}">
+                    <div th:replace="product/product_fragment :: price(${product.price})" th:remove="tag"></div>
+                </span>
+                <del th:if="${product.discountPercent > 0}"><span>
+                   <div th:replace="product/product_fragment :: price(${product.price})" th:remove="tag"></div>
+                </span></del>
             </div>
 
             <div th:if="${product.discountPercent > 0}">Price:
-                <span style="font-size: larger; color: darkred">$ [[${product.discountPercent}]]</span>
-                ( [[${product.discountPercent}]] % off )
+                <span style="font-size: larger; color: darkred">
+                    <div th:replace="product/product_fragment :: price(${product.discountPrice})" th:remove="tag"></div>
+                </span>
+                ( [[${#numbers.formatDecimal(product.discountPercent, 1, THOUSANDS_POINT_TYPE, DECIMAL_DIGITS,
+                CURRENCY_POINT_TYPE)}]] % off )
             </div>
             <div>&nbsp;</div>
             <div th:utext="${product.shortDescription}"></div>
