--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/settings.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/settings.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="tab-pane drop" id="states" role="tabpanel" aria-labelledby="states-tab">
-                States
+                <div th:replace="~{settings/states ::content}"></div>
             </div>
 
             <div class="tab-pane drop" id="mailServer" role="tabpanel" aria-labelledby="mailServer-tab">
