Customer Module (FrontEnd) : CustomerController 1. Customer Form Completed. 2. Js updated

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="" class="nav-link">Registers</a>
+                    <a href="" class="nav-link" th:href="@{/register}">Registers</a>
                 </li>
 
                 <li class="nav-item">
