--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/settings.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/settings.html
@@ -17,7 +17,7 @@
     <div>
         <ul class="nav nav-tabs" id="settingTab" role="tablist">
             <li class="nav-item">
-                <a class="nav-link active" id="general-tab" data-toggle="tab" href="#overview" role="tab"
+                <a class="nav-link active" id="general-tab" data-toggle="tab" href="#general" role="tab"
                    aria-controls="general"
                    aria-selected="true">General</a>
             </li>
@@ -37,6 +37,10 @@
                 <a class="nav-link" id="mailTemplate-tab" data-toggle="tab" href="#mailTemplate" role="tab"
                    aria-controls="mailTemplate" aria-selected="false">Mail Template</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" id="payment-tab" data-toggle="tab" href="#paymentTemplate" role="tab"
+                   aria-controls="mailTemplate" aria-selected="false">Payment</a>
+            </li>
         </ul>
         <div class="tab-content" id="myTabContent">
 
@@ -44,26 +48,31 @@
                 <div th:replace="~{settings/general ::content}"></div>
             </div>
 
-            <div class="tab-pane drop" id="countries" role="tabpanel" aria-labelledby="countries-tab">
+            <div class="tab-pane drop p-3" id="countries" role="tabpanel" aria-labelledby="countries-tab">
                 <div th:replace="~{settings/countries ::content}"></div>
             </div>
 
-            <div class="tab-pane drop" id="states" role="tabpanel" aria-labelledby="states-tab">
+            <div class="tab-pane drop p-3" id="states" role="tabpanel" aria-labelledby="states-tab">
                 <div th:replace="~{settings/states ::content}"></div>
             </div>
 
-            <div class="tab-pane drop" id="mailServer" role="tabpanel" aria-labelledby="mailServer-tab">
-                Mail Server
+            <div class="tab-pane drop p-3" id="mailServer" role="tabpanel" aria-labelledby="mailServer-tab">
+                <div th:replace="~{settings/mail_server ::content}"></div>
             </div>
 
-            <div class="tab-pane drop" id="mailTemplate" role="tabpanel" aria-labelledby="mailTemplate-tab">
-                Mail Template
+            <div class="tab-pane drop p-3" id="mailTemplate" role="tabpanel" aria-labelledby="mailTemplate-tab">
+                <div th:replace="~{settings/mail_template/mail_template ::content}"></div>
+            </div>
+
+            <div class="tab-pane drop p-3" id="paymentTemplate" role="tabpanel" aria-labelledby="payment-tab">
+                Payment Template
             </div>
         </div>
 
     </div>
 
-    <div class="toast justify-content-center d-flex" role="alert" aria-live="polite" aria-atomic="true" data-delay="3000">
+    <div class="toast justify-content-center d-flex" role="alert" aria-live="polite" aria-atomic="true"
+         data-delay="3000">
         <div role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-body">
                 <span id="toastMessage"></span>
@@ -83,6 +92,10 @@
     contextPath = "[[@{/}]]";
     var csrfHeaderName = "[[${_csrf.headerName}]]";
     var csrfValue = "[[${_csrf.token}]]";
+    $(document).ready(() => {
+
+    });
+    var customerVerficationContent = new RichTextEditor('#customerVerficationContent');
 </script>
 </body>
 </html>
