--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/mail_server.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/mail_server.html
@@ -18,7 +18,7 @@
         <div class="form-group row">
             <label class="col-sim-4 col-form-label">Port Number: </label>
             <div class="col-sm-8">
-                <input type="text"
+                <input type="number"
                        class="form-control"
                        name="MAIL_PORT"
                        th:value="${MAIL_PORT}" required/>
